--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.15.5",
+    "@types/socket.io": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
+  },
+  "dependencies": {
+    "socket.io": "^4.6.1"
   }
 }
